# code_paste-rust

./: .gitignore  Cargo.toml  test.http
src/: main.rs
templates/: 404.html  paste.html
